minitrace-macro/tests/ui/err/has-expr-argument.stderr
error: expected identifier
 --> tests/ui/err/has-expr-argument.rs:3:9
  |
3 | #[trace(true)]
  |         ^^^^
